tests/int/use_command/snapshots/integration__int__use_command__include_tests__modules_glob_showcase_tests_r_t_e_resolve-globs.snap
---
source: tests/int/use_command/include_tests.rs
info:
  program: crawk
  args:
    - "-p"
    - fixtures/modules
    - use
    - glob_showcase
    - "-r"
    - "-t"
    - "-e"
    - "--resolve-globs"
---
success: true
exit_code: 0
----- stdout -----
crate::file_module::greet
crate::file_module::nesting_depth
crate::glob_showcase::ErrorKind
crate::glob_showcase::Status
crate::glob_showcase::api::API_ENDPOINT
crate::glob_showcase::api::API_MAX_RETRIES
crate::glob_showcase::api::API_TIMEOUT
crate::glob_showcase::api::clear_all
crate::glob_showcase::api::count
crate::glob_showcase::api::delete_data
crate::glob_showcase::api::exists
crate::glob_showcase::api::get_data
crate::glob_showcase::api::list_all
crate::glob_showcase::api::set_data
crate::glob_showcase::api::update_data
crate::glob_showcase::config::client::MAX_RETRIES
crate::glob_showcase::config::client::TIMEOUT_MS
crate::glob_showcase::config::client::USER_AGENT
crate::glob_showcase::config::logging::LOG_FILE
crate::glob_showcase::config::logging::LOG_LEVEL
crate::glob_showcase::config::logging::MAX_LOG_SIZE_MB
crate::glob_showcase::config::server::HOST
crate::glob_showcase::config::server::MAX_CONNECTIONS
crate::glob_showcase::config::server::PORT
crate::glob_showcase::database::connect
crate::glob_showcase::database::connection
crate::glob_showcase::database::connection::DEFAULT_PORT
crate::glob_showcase::database::connection::connect
crate::glob_showcase::database::connection::disconnect
crate::glob_showcase::database::disconnect
crate::glob_showcase::database::execute
crate::glob_showcase::database::query
crate::glob_showcase::database::query::MAX_QUERY_SIZE
crate::glob_showcase::database::query::execute
crate::glob_showcase::database::query::fetch_all
crate::glob_showcase::database::query::fetch_one
crate::glob_showcase::database::transaction
crate::glob_showcase::database::transaction::begin
crate::glob_showcase::database::transaction::commit
crate::glob_showcase::database::transaction::rollback
crate::glob_showcase::errors::AuthenticationError
crate::glob_showcase::errors::ErrorKind
crate::glob_showcase::errors::NotFoundError
crate::glob_showcase::errors::Result
crate::glob_showcase::errors::ValidationError
crate::glob_showcase::models::Category
crate::glob_showcase::models::Comment
crate::glob_showcase::models::CommentId
crate::glob_showcase::models::Post
crate::glob_showcase::models::PostId
crate::glob_showcase::models::Status
crate::glob_showcase::models::Tag
crate::glob_showcase::models::User
crate::glob_showcase::models::UserId
crate::glob_showcase::traits::Identifiable
crate::glob_showcase::traits::Nameable
crate::glob_showcase::traits::Serializable
crate::glob_showcase::traits::Timestamped
crate::glob_showcase::traits::Validatable
crate::glob_showcase::utils::collection::first
crate::glob_showcase::utils::collection::is_empty
crate::glob_showcase::utils::collection::last
crate::glob_showcase::utils::math::E
crate::glob_showcase::utils::math::PI
crate::glob_showcase::utils::math::add
crate::glob_showcase::utils::math::divide
crate::glob_showcase::utils::math::multiply
crate::glob_showcase::utils::math::subtract
crate::glob_showcase::utils::string::lowercase
crate::glob_showcase::utils::string::reverse
crate::glob_showcase::utils::string::trim
crate::glob_showcase::utils::string::uppercase
crate::inline_modules::inner
crate::inline_modules::nested
crate::inline_modules::outer
crate::inline_modules::sibling_greet
crate::inline_modules::use_private
crate::nesting::level1::level2::depth
crate::nesting::level1::level2::level3
crate::nesting::level1::level2::root_depth

----- stderr -----
