tests/int/use_command/snapshots/integration__int__use_command__include_tests__modules_glob_showcase_tests_t_e.snap
---
source: tests/int/use_command/include_tests.rs
info:
  program: crawk
  args:
    - "-p"
    - fixtures/modules
    - use
    - glob_showcase
    - "-t"
    - "-e"
---
success: true
exit_code: 0
----- stdout -----
crate::file_module::*
crate::inline_modules::*
crate::nesting::level1::level2::*

----- stderr -----
