tests/int/use_command/snapshots/integration__int__use_command__include_tests__modules_inline_modules_tests_r_t.snap
---
source: tests/int/use_command/include_tests.rs
info:
  program: crawk
  args:
    - "-p"
    - fixtures/modules
    - use
    - inline_modules
    - "-r"
    - "-t"
---
success: true
exit_code: 0
----- stdout -----
crate::dir_module::greet
crate::empty_module
crate::file_module
crate::file_module::greet
crate::inline_modules::outer::file_child::greet
crate::inline_modules::private_inline::_secret

----- stderr -----
