tests/int/use_command/snapshots/integration__int__use_command__include_tests__modules_inline_modules_tests_t.snap
---
source: tests/int/use_command/include_tests.rs
info:
  program: crawk
  args:
    - "-p"
    - /home/barcie/coding/crawk/fixtures/modules
    - use
    - inline_modules
    - "-t"
---
success: true
exit_code: 0
----- stdout -----
crate::file_module::greet

----- stderr -----
