tests/int/use_command/snapshots/integration__int__use_command__include_tests__modules_lib_tests_r_t.snap
---
source: tests/int/use_command/include_tests.rs
info:
  program: crawk
  args:
    - "-p"
    - fixtures/modules
    - use
    - lib
    - "-r"
    - "-t"
---
success: true
exit_code: 0
----- stdout -----
crate::::*
crate::advanced_globs::*
crate::advanced_globs::Consumer
crate::advanced_globs::MultiImpl
crate::advanced_globs::Provider
crate::advanced_globs::Transformer
crate::advanced_globs::aliased_module::OriginalStruct as AliasedStruct
crate::advanced_globs::aliased_module::original_name as renamed_func
crate::advanced_globs::deep_function
crate::advanced_globs::enum_variants::*
crate::advanced_globs::internal::*
crate::advanced_globs::layer1::*
crate::advanced_globs::layer1::layer2::*
crate::advanced_globs::layer1::layer2::layer3::*
crate::advanced_globs::layer1_function
crate::advanced_globs::layer2_function
crate::advanced_globs::macro_module::*
crate::advanced_globs::original::*
crate::advanced_globs::prelude::*
crate::advanced_globs::shadowing::shadowed_func
crate::advanced_globs::trait_providers::*
crate::advanced_globs::unix_specific::*
crate::advanced_globs::windows_specific::*
crate::aliased
crate::custom_path::greet
crate::dir_module
crate::dir_module::child_dir::greet
crate::dir_module::child_file
crate::dir_module::child_file::greet
crate::dir_module::greet
crate::file_module
crate::file_module::*
crate::file_module::greet
crate::file_module::nesting_depth
crate::file_module::{*}
crate::foo::bar::*
crate::foo::bar::public_fn
crate::glob_patterns::*
crate::glob_patterns::constants::*
crate::glob_patterns::demonstrate_glob_utilities
crate::glob_patterns::demonstrate_nested_glob
crate::glob_patterns::mixed_exports::func_one as pub_func_one
crate::glob_patterns::mixed_exports::special_function as renamed_special
crate::glob_patterns::mixed_exports::{func_one, func_two, func_three, special_function}
crate::glob_patterns::outer::*
crate::glob_patterns::outer::inner::*
crate::glob_patterns::self_ref::*
crate::glob_patterns::set_a::*
crate::glob_patterns::set_b::*
crate::glob_patterns::traits::*
crate::glob_patterns::types::*
crate::glob_patterns::utilities::*
crate::glob_showcase::*
crate::glob_showcase::ErrorKind
crate::glob_showcase::Status
crate::glob_showcase::api::*
crate::glob_showcase::api::{get_data, set_data, delete_data}
crate::glob_showcase::config::all::*
crate::glob_showcase::config::client::*
crate::glob_showcase::config::logging::*
crate::glob_showcase::config::server::*
crate::glob_showcase::database::*
crate::glob_showcase::database::connection::*
crate::glob_showcase::database::query::*
crate::glob_showcase::database::transaction::*
crate::glob_showcase::database::{connect, disconnect, execute}
crate::glob_showcase::demonstrate_all
crate::glob_showcase::errors::*
crate::glob_showcase::errors::{NotFoundError, ValidationError}
crate::glob_showcase::models::*
crate::glob_showcase::models::{User, Post, Comment}
crate::glob_showcase::prelude::*
crate::glob_showcase::traits::*
crate::glob_showcase::traits::{Identifiable, Nameable, Validatable}
crate::glob_showcase::utils::collection::*
crate::glob_showcase::utils::math::*
crate::glob_showcase::utils::math::{add, subtract, multiply, divide}
crate::glob_showcase::utils::math::{add, subtract}
crate::glob_showcase::utils::string::*
crate::glob_showcase::utils::string::lowercase as str_lower
crate::glob_showcase::utils::string::uppercase as str_upper
crate::group_patterns::demonstrate_group_patterns
crate::inline_modules
crate::inline_modules::*
crate::inline_modules::inner::greet
crate::inline_modules::nested::deep::value
crate::inline_modules::outer::file_child::greet
crate::inline_modules::private_inline::_secret
crate::item_visibility::PUB_CONST
crate::item_visibility::PUB_CRATE_CONST
crate::item_visibility::PUB_CRATE_STATIC
crate::item_visibility::PUB_STATIC
crate::item_visibility::PubAlias
crate::item_visibility::PubCrateAlias
crate::item_visibility::PubCrateStruct
crate::item_visibility::PubStruct::default
crate::item_visibility::exercise_all
crate::item_visibility::pub_crate_function
crate::item_visibility::pub_function
crate::item_visibility::pub_super_function
crate::item_visibility::{PubCrateEnum, PubCrateTrait}
crate::mixed::file_child::greet
crate::mixed::greet
crate::mixed::inline_child::greet
crate::nesting
crate::nesting::depth
crate::nesting::level1::depth
crate::nesting::level1::level2::*
crate::nesting::level1::level2::depth
crate::nesting::level1::level2::level3
crate::nesting::level1::level2::level3::deepest
crate::nesting::{level1::level2::level3::{deepest as deep_fn}}
crate::nesting::{level1::level2::level3::{depth as l3_depth}}
crate::nesting::{level1::level2::{*}}
crate::nesting::{self as Nest}
crate::no_pub_items
crate::no_pub_items::*
crate::no_pub_items::exercise_private
crate::reexports::*
crate::reexports::Foo
crate::reexports::internal::Foo
crate::reexports::internal::Foo as Bar
crate::reexports::internal::Secret
crate::reexports::internal::{Baz, Qux, InternalEnum, InternalTrait, INTERNAL_CONST_A, INTERNAL_CONST_B, internal_helper_1, internal_helper_2}
crate::reexports::types::*
crate::visibility
crate::visibility::*
crate::visibility::inner::uses_restricted
crate::visibility::private_mod::deepest_greet
crate::visibility::private_mod::greet
crate::visibility::pub_crate_mod::greet
crate::visibility::pub_crate_mod::parent_greet
crate::visibility::pub_mod::greet
crate::visibility::pub_super_mod::dir_module_greet
crate::visibility::pub_super_mod::greet
crate::visibility::restricted_mod::RestrictedConfig
crate::visibility::restricted_mod::VERSION
crate::visibility::restricted_mod::greet
crate::visibility::restricted_mod::nesting_depth

----- stderr -----
